# bl-predictor

./: .appveyor.yml  .ci-ignore  .gitignore  .travis.yml  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  bl_predictorcrawled_data.csv  jupyter_notebook_config.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: Pytest and flake8.yml  all_pep8+tests.yml  codeql-analysis.yml  coverage.yml  lint_flake8.yml  main_pep8+tests.yml  pep8.yml  pytest.yml  pytest_all_testclasses.yml  python-app.yml
bl_predictor/: __main__.py  crawled_data.csv  crawler.py  gui.py  gui_slider_widget.py  models.py  prediction_evaluation.py
docs/: conf.py  index.rst
exp/: 00_example.py
src/scaffold/: __main__.py  cli.py  cython_example.pyx
teamproject/: [temp]gui-example.py  __main__.py  alt_models.py  crawled_data  crawled_data.csv  crawler.py  gui.py  gui_slider_widget.py  models.py  prediction_evaluation.py
teamproject/models/: nonsense.py
tests/: crawled_data.csv  test_cli.py  test_crawler+model_combo.py  test_crawler.py  test_cython_example.py  test_evaluation.py  test_gui.py  test_model_nonsense.py  test_models.py
