# This file was introduced in PEP 518 and PEP 517 as a way of specifying the
# build system (setuptools/flit/poetry/..), as well as dependencies that should
# already be available when executing the build system (e.g. running setup.py).
# For more information, see:
#   https://www.python.org/dev/peps/pep-0517/
#   https://www.python.org/dev/peps/pep-0518/
#
# Several tools in the python ecosystem (for packaging, documentation,
# testing, coverage, static analysis, etc.), which previously had their
# separate config file or were configured through setup.cfg, have since added
# support for configuration through this file, and more can be expected to
# follow this trend.

[build-system]
requires = [
    "setuptools",
    "cython",
]
build-backend = "setuptools.build_meta"
