[metadata]
name             = teamproject
version          = attr: teamproject.__version__
description      = A short project description (one-liner!)
long_description = file: README.rst, CHANGES.rst
url              = https://github.com/<USERNAME>/swp-teamprojekt
author           = Original Author
author_email     = original.author@stud.uni-tuebingen.de
classifiers      =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
long_description_content_type = text/x-rst

[options]
python_requires = >=3.5
install_requires =
    numpy
    matplotlib
    pandas
include_package_data = true

[bdist_wheel]
# Enable this option for pure python packages (with no platform-specific
# redistributable files):
universal = 1

[options.extras_require]
dev =
    flake8
    twine
    pytest
    sphinx

[options.entry_points]
gui-scripts =
    teamproject = teamproject.gui:main

[flake8]
ignore = E221,E226,E241,E402
exclude = docs,.git,build,__pycache__,dist,.eggs

[tool:pytest]
testpaths = tests
