[metadata]
name             = scaffold
version          = attr: scaffold.__version__
description      = A short project description (one-liner!)
long_description = file: README.rst, CHANGES.rst
url              = https://github.com/probabilistic-numerics/scaffold
# Your Name:
author           = Original Author
author_email     = original.author@uni-tuebingen.de
# Current maintainer (if different):
maintainer       = Current Maintainer
maintainer_email = current.maintainer@uni-tuebingen.de
license          = GPLv3+
license_file     = COPYING.GPLv3.txt
classifiers      =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
long_description_content_type = text/x-rst

[options]
python_requires = >=3.5
install_requires =
    numpy
    matplotlib
    scikit-learn
    importlib_resources;python_version<'3.7'
    docopt
include_package_data = true
# packages with C extensions should be installed unzipped:
zip_safe = false

[bdist_wheel]
# Enable this option for pure python packages (with no platform-specific
# redistributable files):
universal = 0

[options.extras_require]
dev =
    jupyter
    jupyterlab
    jupytext
    flake8
    twine
    pytest
    cython
    sphinx

[options.entry_points]
console-scripts =
    scaffold = scaffold.cli:main

[flake8]
ignore = E221,E226,E241,E402
exclude = docs,.git,build,__pycache__,dist,.eggs

[tool:pytest]
testpaths = tests
