[metadata]
# Project metadata (intended as information for users); adapt as suitable:
name             = teamproject
version          = attr: teamproject.__version__
description      = A short project description (one-liner!)
long_description = file: README.rst
url              = https://github.com/<USERNAME>/swp-teamprojekt
author           = Original Author
author_email     = original.author@stud.uni-tuebingen.de
classifiers      =
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
long_description_content_type = text/x-rst

[options]
# This section specifies what code folders and which external dependencies are
# required to run the application:
packages = teamproject
python_requires = >=3.8
install_requires =
    numpy
    matplotlib
    pandas
# Whether non-code files matched by MANIFEST.in that are located inside the
# packages are required:
include_package_data = true

[options.extras_require]
# Additional requirements for package developers, such as test runners and
# other tooling:
dev =
    flake8
    twine
    pytest
    sphinx

[options.entry_points]
# Installing this package will create an executable by the name of
# the left-hand-side (teamproject) that calls the right-hand-side when started:
gui-scripts =
    teamproject = teamproject.gui:main

# Config for test/dev tooling:

[flake8]
ignore = E221,E226,E241,E402
exclude = docs,.git,build,__pycache__,dist,.eggs

[tool:pytest]
testpaths = tests
